public/css/app.css
body {
  font-size: 16px;
  color: #444;
  -webkit-font-smoothing: antialiased;
}

.container {
  width: 600px;
  padding: 0 0 0 25px;
  margin: 0;
}

h1 {
  margin-bottom: 25px;
  padding: 5px 0 25px 25px;
  border-bottom: solid 1px #ddd;
}

h1 div {
  padding: 10px 0 0 0;
  margin: 0;
  font-weight: 400;
  font-size: 15px;
}

h2 {
  font-size: 20px;
  color: #666;
  padding: 0 0 20px 0;
  margin: 0;
}

h2 div {
  font-size: 15px;
  font-weight: 400;
  color: #777;
  padding: 6px 0;
  display: block;
}

input[type='file'] {
  color: transparent;
  display: inline;
  width: 90px;
}

input[type='text'] {
  vertical-align: top;
  font-size: 20px;
  padding: 10px;
  width: 412px;
  border: solid 1px #bbb;
  border-radius: 4px;
}

button.submit {
  vertical-align: top;
  margin-left: 10px;
  font-size: 20px;
  padding: 10px 15px;
}

.alert-info div {
  font-size: 18px;
}

.bot-stats {
  border-top: solid 1px #ddd;
  margin-top: 25px;
  padding: 25px 0 0 25px;
}

.registration-off {
  opacity: 0.3;
  background: #fff;
}

.bot-update-container {
  background:#f9f9f9;
  margin: -25px 0;
  padding: 20px 0;
  text-shadow: 1px 1px #fff;
}

.bot-perf-bar {
  position: absolute;
  top: 15px;
  right: 15px;
  overflow: hidden;
  display: inline-block;
  border:solid 1px #ddd;
  border-radius: 4px;
}

.bot-perf-bar div {
  float: left;
  font-size: 24px;
  color: #444;
  font-weight: 400;
  background:#f9f9f9;
  padding: 10px 25px;
  text-align: center;
  text-shadow: 1px 1px #fff;
  border-right:solid 1px #fff;
}

.bot-perf-bar div:last-child {
  border-right: none;
}

.bot-perf-bar div span {
  display: block;
  padding-top: 5px;
  font-weight: 300;
  text-transform: uppercase;
  font-size: 14px;
}

.bot-history {
  overflow: hidden;
  margin: 10px 25px;
  background: #f5f5f5;
  border:solid 1px #ddd;
  border-radius: 4px;
  font-size: 16px;
  cursor: pointer;
}

.bot-history.no-hover {
  cursor: auto;
}

.bot-history:hover {
  background: #eee;
}

.bot-history:hover.no-hover {
  background: #f5f5f5;
}

.bot-history .bot-icon {
  float: left;
  font-size: 30px;
  padding: 12px 0 12px 15px;
}

.bot-history .bot-position {
  float: left;
  font-weight: 900;
  font-size: 30px;
  padding: 12px 15px;
  border-right: solid 1px #ddd;
}

.bot-history .bot-icon .icon-ok-circle {
  color: #44cc44;
}

.bot-history .bot-icon .icon-remove-circle {
  color: #cc4444;
}

.bot-history .bot-icon .icon-minus {
  color: #ffbf00;
}

.bot-history .bot-name {
  float: left;
  font-size: 22px;
  text-shadow: 1px 1px #fff;
  padding: 17px 15px;
}

.bot-history .hand-result {
  float: right;
  padding: 10px;
  width: 100px;
  font-size: 16px;
  text-align: center;
  text-shadow: 1px 1px #fff;
  border-left: solid 1px #ddd;
}

.bot-history.no-hover .hand-result {
  font-size: 14px;
}

.bot-history .hand-result span {
  font-weight: 400;
  padding-top: 5px;
  text-transform: uppercase;
  font-size: 14px;
  display: block;
}

.bot-history.no-hover .hand-result span {
  font-size: 12px;
}

.hands-container {
  overflow: auto;
  padding: 10px;
  margin: 0 25px;
  background: #f5f5f5;
  height: 300px;
  border: solid 1px #ddd;
  border-radius: 4px;
  display: none;
}

.hands-container table {
  width: 75%;
  margin: 0 auto;
}

.bot-updates {
  overflow: hidden;
  padding-bottom: 30px;
  margin-left: 20px;
}

.bot-update {
  float: left;
  padding: 10px 15px;
  margin: 5px;
  background: #f5f5f5;
  border: solid 1px #ddd;
  border-radius: 4px;
}

.bot-update .bot-update-name {
  font-size: 22px;
  text-shadow: 1px 1px #fff;
}

.bot-update .bot-update-date {
  font-size: 16px;
  color: #777;
  text-shadow: 1px 1px #fff;
}

.bot-error-header {
  margin: 20px 20px 10px 20px;
  font-size: 20px;
  font-weight: 400;
  color: #444;
}

.bot-error-reason {
  margin: 0px 20px 10px 20px;
  font-size: 14px;
  font-weight: 300;
  color: #444;
  font-family: 'courier';
}

